# O3

./: .gitignore  README.md  TestPlugin.sh  buildFileType.sh  buildObjectCube.sh  runLaugavegurPresentation.sh  runPresentation.sh  runPythonDatabase.sh  setupDatabase.sh  textTestDatabase.sh
LaugavegurPresentation/: LaugavegurImageTags.csv
ObjectCube/: .cproject  .monetdb  .project  CMakeLists.txt  Hub.cpp  Hub.h  Language.cpp  Object.cpp  ObjectTag.cpp  ObjectTag.h  main.cpp  makeTest
ObjectCube/Converters/: AlphanumericalTagConverter.cpp  AlphanumericalTagConverter.h  DateRangeFilterConverter.cpp  DateRangeFilterConverter.h  DateTagConverter.cpp  DateTagConverter.h  DimensionConverter.cpp  DimensionFilterConverter.cpp  DimensionFilterConverter.h  FilterConverter.cpp  FilterConverter.h  HierarchyNodeConverter.cpp  HierarchyNodeConverter.h  NumericalRangeFilterConverter.cpp  NumericalRangeFilterConverter.h  NumericalTagConverter.cpp  NumericalTagConverter.h  PluginConverter.cpp  PluginConverter.h  PluginTagSetConverter.cpp  PluginTagSetConverter.h  RGBTagConverter.cpp  RGBTagConverter.h  TagConverter.cpp  TagConverter.h  TagFilterConverter.cpp  TagFilterConverter.h  TagSetConverter.cpp  TagSetConverter.h  TimeRangeFilterConverter.cpp  TimeRangeFilterConverter.h  TimeTagConverter.cpp  TimeTagConverter.h
ObjectCube/DataAccess/PostgreSQL/: CommonPostgreSQL.cpp  SearchPostgreSQL.cpp  TagSetPostgreSQL.cpp
ObjectCube/Hierarchy/: DefaultDimension.cpp  DefaultHierarchyNode.cpp  Dimension.h  HierarchyNode.cpp  HierarchyNode.h  PersistentDimension.cpp  PersistentHierarchyNode.cpp  PersistentHierarchyNode.h  TagBasedHierarchyNode.cpp  VirtualHierarchyNode.cpp
ObjectCube/LayerShared/: DebugInfo.cpp  DebugInfo.h  Parameters.cpp  Parameters.h
ObjectCube/Plugin/: Plugin.cpp  PluginServer.cpp  PluginTagSet.cpp
ObjectCube/State/: StateDimensionNode.h  StateTag.h
ObjectCube/Tag/: AlphanumericalTag.cpp  DateTag.cpp  NumericalTag.cpp  RGBTag.cpp  Tag.cpp  TimeTag.cpp
ObjectCube/TagSet/: AlphanumericalTagSet.cpp  DateTagSet.cpp  NumericalTagSet.cpp  RGBTagSet.cpp  TagSet.cpp  TagSet.h  TimeTagSet.cpp
ObjectCube/UnitTests/: -p  AlphanumericalTagSetTest.cpp  AlphanumericalTagTest.cpp  DateTagTest.cpp  NumericalTagTest.cpp  PersistentDimensionTest.cpp  PersistentHierarchyNodeTest.cpp  SetupDataStorage.cpp  SetupDataStorage.h  TagSetTest.cpp  TagTest.cpp  TimeTagTest.cpp
PhotoCube/: Admin.py  Browser.config  Runner.py  createLaugavegurPresentationDatabase.py  laugavegur_hierarchy_creation_en.py  run.sh  runFolder.sh
PhotoCube/Database/: Grimur.db  Images.csv  LaugarvegurImageTags.csv  Laugarvegur_object_creation.py  ObjectCubeDB  ObjectCube_DB_creation_script.txt  icmr_db_creation.py  laugarvegur.db  laugarvegur_db_creation.py
PhotoCube/photocube/: __init__.py  constants.py
Plugins/: CMakeLists.txt
Plugins/Color/: CMakeLists.txt  ColorData.h  ColorProcessing.cpp  ColorProcessing.h  Color_Plugin.cpp  Color_Plugin.h  Makefile  insertPlugin.sql  removePlugin.sql
Plugins/EXIF/: CMakeLists.txt  EXIF_Plugin.cpp  EXIF_Plugin.h  Makefile  insertPlugin.sql  removePlugin.sql
Plugins/FaceRecognition/: CMakeLists.txt  DISABLED_insertPlugin.sql  FaceRecognitionPlugin.cpp  FaceRecognitionPlugin.h  PluginTest.cpp  README  removePlugin.sql
Plugins/FaceRecognition/FaceRecTest/FaceRecTest/: FaceRecTest.1  main.cpp
Plugins/FaceRecognition/FaceRecTest/FaceRecTest.xcodeproj/: project.pbxproj
Plugins/FaceRecognition/common/: common.h
Plugins/FaceRecognition/face_database/: Face.cpp  Face.h  MySQLite.cpp  MySQLite.h  Person.cpp  Person.h  createdb.sql  faceDatabase.sqlite  makefile  testfacedb.cpp
Plugins/FaceRecognition/face_detection/: FaceDetector.cpp  FaceDetector.h  FaceExtractor.cpp  RegionOfInterest.cpp  RegionOfInterest.h  generate_set.sh  makefile
Plugins/FaceRecognition/face_recognition/: Eigenfaces.cpp  Eigenfaces.h  FaceRecTest.cpp  FaceRecTest.h  Fisherfaces.cpp  Fisherfaces.h  ImageList.cpp  ImageList.h  LDA.cpp  LDA.h  README  RecImage.cpp  RecImage.h  Recognizer.cpp  Recognizer.h  ldatest.cpp  makefile  makelist.pl  pgm2png.cpp  test.cpp  tests_e.sh  tests_f.sh
Plugins/FaceRecognition/face_recognition/file_lists/: croppedyale_all.txt  croppedyale_all_nobad.txt  croppedyale_test_all_less_3.txt  croppedyale_train_3_well_lit.txt  test_all_1-9.txt  test_all_2-8.txt  test_all_3-7.txt  test_all_4-6.txt~  test_all_5-5.txt  test_all_5-5.txt~  testfiles-1.txt  testfiles-1.txt~  testfiles-2.txt  testfiles-2.txt~  testfiles-3.txt  testfiles-3.txt~  testfiles-4.txt  testfiles-4.txt~  testfiles-5.txt  testfiles-5.txt~  testfiles-6.txt  testfiles-6.txt~  testfiles-7.txt  testfiles-7.txt~  testfiles-cherry.txt  testfiles-cherry.txt~  testfiles-png.txt  train_all_1-9.txt  train_all_2-8.txt  train_all_3-7.txt  train_all_4-6.txt  train_all_4-6.txt~  train_all_5-5.txt  train_all_5-5.txt~  train_one.txt  train_two.txt  trainingfiles-1.txt  trainingfiles-1.txt~  trainingfiles-2.txt  trainingfiles-2.txt~  (+13 more)
Plugins/FaceRecognition/gui/: Makefile  PluginWrapper.cpp  PluginWrapper.h  boundingbox.cpp  boundingbox.h  gui.pro  image.cpp  image.h  imageLabel.cpp  imageLabel.h  imageservice.cpp  imageservice.h  imagewidget.cpp  imagewidget.h  main.cpp  maindialog.cpp  maindialog.h
Plugins/FileType/: CMakeLists.txt  FileType_Plugin.cpp  FileType_Plugin.h  Makefile  insertPlugin.sql  removePlugin.sql
Plugins/ImportNumbering/: CMakeLists.txt  ImportNumbering_Plugin.cpp  ImportNumbering_Plugin.h  insertPlugin.sql  removePlugin.sql
Plugins/PluginTemplate/: CMakeLists.txt  Your_Plugin.cpp  Your_Plugin.h
Plugins/Text/: Makefile  (+5 more)
Presentation/: ObjectTags.csv  TEXT_001.TXT  TEXT_002.TXT  TEXT_003.TXT  TEXT_004.TXT
PythonWrapper/: ObjectCube_boost.cpp  build.sh  makefile  makefile~
SetupDatabase/: createPresentationDatabase.py  createTextPluginDatabase.py  init_plugins.sql  presentation_hierarchy_creation.py  testObject.py  update_view.sql
SetupObjectCubePostgreSQL/: PluginSQL  a.out  databasePostgreSQL.txt  insertEXIFPlugin.txt  insertTextPlugin.txt  main.cpp  runDatabase.py  runDatabase.sh
(+69 files in other folders)
